tests/ui/error-codes/E0004-2.stderr
error[E0004]: non-exhaustive patterns: `None` and `Some(_)` not covered
  --> $DIR/E0004-2.rs:4:11
   |
LL |     match x { }
   |           ^ patterns `None` and `Some(_)` not covered
   |
note: `Option<i32>` defined here
  --> $SRC_DIR/core/src/option.rs:LL:COL
  ::: $SRC_DIR/core/src/option.rs:LL:COL
   |
   = note: not covered
  ::: $SRC_DIR/core/src/option.rs:LL:COL
   |
   = note: not covered
   = note: the matched value is of type `Option<i32>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
   |
LL ~     match x {
LL +         None | Some(_) => todo!(),
LL ~     }
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
