tests/ui/error-codes/E0004-2.rs
fn main() {
    let x = Some(1);

    match x { } //~ ERROR E0004
}
